--- a/MDK-ARM/ValveHoll-Changer/ValveHoll-Changer.build_log.htm
+++ b/MDK-ARM/ValveHoll-Changer/ValveHoll-Changer.build_log.htm
@@ -17,7 +17,7 @@ Library Manager: ArmAr.exe V5.06 update 6 (build 750)
 Hex Converter:   FromElf.exe V5.06 update 6 (build 750)
 CPU DLL:         SARMCM3.DLL V5.27.1.0
 Dialog DLL:      DCM.DLL V1.17.2.0
-Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.6.0
+Target DLL:      Segger\JL2CM3.dll V2.99.35.0
 Dialog DLL:      TCM.DLL V1.36.1.0
  
 <h2>Project:</h2>
@@ -29,7 +29,7 @@ Project File Date:  01/24/2022
 Build target 'ValveHoll-Changer'
 compiling ModbusMaster.c...
 linking...
-Program Size: Code=41952 RO-data=2916 RW-data=664 ZI-data=21344  
+Program Size: Code=41980 RO-data=2916 RW-data=664 ZI-data=21344  
 FromELF: creating hex file...
 After Build - User command #2: fromelf.exe --bin -o "ValveHoll-Changer\ValveHoll-Changer.bin" "ValveHoll-Changer\ValveHoll-Changer.axf"
 "ValveHoll-Changer\ValveHoll-Changer.axf" - 0 Error(s), 0 Warning(s).
